Fixing h3 alignment

--- a/Greenhill_Sarah_project2/css/main.css
+++ b/Greenhill_Sarah_project2/css/main.css
@@ -122,7 +122,7 @@ body {
 h3 {
 	background-color: #2d6d9c;
 	box-shadow: 2px 8px 20px rgba(68,68,68,0.6);
-	width: 1350px;
+	width: 1200px;
 	padding-left: 20px;
 }
 
